--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,7 +45,9 @@
       </div>
     </nav>
 
-    {% block content %}
+   <div class="container p-4">
+     {% block content %}
     {% endblock %}
+   </div> 
   </body>
 </html>
